--- a/app/content/service/security/governance.yml
+++ b/app/content/service/security/governance.yml
@@ -1,5 +1,5 @@
 Governance:
-  "Governance Framework":
+  "Governance framework":
     requirements: The consumer should have sufficient confidence that the governance framework and processes in place for the service are appropriate for their intended use of it.
     filters: The consumer should have sufficient confidence that the governance framework and processes in place for the service are appropriate for their intended use of it.
     hint: "Do you have a governance framework and processes in place for the service?"
