--- a/app/content/service/security/secure-service-administration.yml
+++ b/app/content/service/security/secure-service-administration.yml
@@ -2,7 +2,7 @@ Secure service administration:
   "Service management model":
     requirements: Consumers have sufficient confidence that the technical approach the service provider uses to manage the service does not put their data or service at risk.
     filters: Consumers have sufficient confidence that the technical approach the service provider uses to manage the service does not put their data or service at risk.
-    hint: "Which service management model do you use?"
+    hint: ""
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radios
