--- a/service/service-details.yml
+++ b/service/service-details.yml
@@ -4,26 +4,26 @@ Service details:
     mockAnswer: Software as a service
     fields:
       - type: radio
-        label: Infrastructure as a Service
+        label: Infrastructure as a Service (IaaS)
         validation: notBlank
         explanation: "Infrastructure is the hardware that makes software work. It’s the networks, hosting facilities and servers that platforms and software depend on. IaaS is infrastructure you can order and run entirely over the internet, without having to pay for your own hardware."
         errorMessage: ""
         errorSummaryMessage: ""
       - type: radio
-        label: Software as a Service
+        label: Software as a Service (SaaS)
         validation: notBlank
-        explanation: "SaaS is an application or service that can be run over the internet or in the cloud. For example, web-based email services, customer relationship management (CRM) software and analytics tools."
+        explanation: "SaaS is an application or service that can be run over the internet or in the cloud. Examples of SaaS include web-based email services, customer relationship management (CRM) software and analytics tools."
         errorMessage: ""
         errorSummaryMessage: ""
       - type: radio
-        label: Platform as a Service
+        label: Platform as a Service (PaaS)
         validation: notBlank
-        explanation: "Platforms are just that: software platforms that provide a basis for building other services and applications. With PaaS, you can set up, order, pay for and manage platforms in the cloud."
+        explanation: "PaaS is a software platform that provides a basis for building other services and applications. With PaaS, you can set up, order, pay for and manage platforms in the cloud."
         errorMessage: ""
         errorSummaryMessage: ""
       - type: radio
-        label: Specialist Cloud Services
+        label: Specialist Cloud Services (SCS)
         validation: notBlank
-        explanation: "Specialist Cloud Services support your transition to SaaS, PaaS and IaaS. For example, cloud strategy, data transfer between providers, or day-to-day support of cloud-based services."
+        explanation: "Specialist Cloud Services support your transition to SaaS, PaaS and IaaS. Examples of SCS include cloud strategy, data transfer between providers, or day-to-day support of cloud-based services."
         errorMessage: ""
         errorSummaryMessage: ""
