--- a/service/service-details.yml
+++ b/service/service-details.yml
@@ -1,5 +1,5 @@
 Service details:
-  What kind of service are you submitting?:
+  Service type:
     hint: Select one option relevant to your service
     mockAnswer: Software as a service
     fields:
