--- a/service/security/asset-protection-and-resilience.yml
+++ b/service/security/asset-protection-and-resilience.yml
@@ -76,8 +76,8 @@ Asset protection and resilience:
       - type: radios
         options:
           - "CPA Foundation"
-          - "Assured Product"
-          - "CESG or CPNI-approved erasure"
+          - "CESG-assured product" 
+          - "CPNI-approved erasure"
           - "Other secure erasure"
           - "Other erasure process"
       - type: assurance
@@ -89,11 +89,11 @@ Asset protection and resilience:
     fields:
       - type: radios
         options:
-          - "CESG-assured destruction service (CAS)"
-          - "CPA Foundation Assured Product"
+          - "CESG-assured destruction service (CAS(T))"
+          - "CPA Foundation-assured product"
           - "CPNI-approved destruction service"
           - "BS EN 151713:2009-compliant destruction"
-          - "CESG or CPNI-approved erasure"
+          - "CESG-approved erasure"
           - "Other secure erasure"
           - "Other destruction/erasure process"
       - type: assurance
