--- a/service/security/governance.yml
+++ b/service/security/governance.yml
@@ -2,7 +2,7 @@ Governance:
   "Governance framework":
     requirements: The consumer should have sufficient confidence that the governance framework and processes in place for the service are appropriate for their intended use of it.
     filters: The consumer should have sufficient confidence that the governance framework and processes in place for the service are appropriate for their intended use of it.
-    hint: "Do you have a governance framework and processes in place for the service?"
+    hint: "Do you have a governance framework and process in place for the service, eg ISO277001:2013?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
