Added hints for educational pricing

--- a/service/pricing.yml
+++ b/service/pricing.yml
@@ -57,6 +57,7 @@ Pricing:
         errorSummaryMessage: ""
   Education pricing:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
+    hint: "Do you offer special pricing for educational organisations?"
     fields:
       - type: boolean
         validation: notBlank
