--- a/service/provisioning.yml
+++ b/service/provisioning.yml
@@ -8,7 +8,7 @@ Provisioning:
         errorSummaryMessage: ""
   Service provisioning time:
     dependsOnLots: SaaS, PaaS, IaaS
-    hint: ""
+    hint: "How long does it take to get your service up and running? For example 1 to 5 hours, 2 to 3 days."
     fields:
       - type: text
         validation: notBlank
