--- a/service/data-storage.yml
+++ b/service/data-storage.yml
@@ -57,8 +57,9 @@ Data storage:
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
-  Backup and disaster recovery in place:
+  Backup, disaster recovery and resilience plan in place:
     dependsOnLots: SaaS, PaaS, IaaS
+    hint: "You can provide more detail on your disaster recovery plan in your service definition document."
     fields:
       - type: boolean
         validation: notBlank
