updated support heading and hint

--- a/service/support.yml
+++ b/service/support.yml
@@ -28,7 +28,7 @@ Support:
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
-  Support accessible to third-party suppliers:
+  Support accessible to any third-party suppliers:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: boolean
@@ -43,9 +43,9 @@ Support:
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
-  Support response times:
+  Standard support response times:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
-    hint: "How long will it take until support can begin to be provided? Maximum 20 words."
+    hint: "How long will it take until support can begin to be provided? eg 1 hour or 1 business day. Maximum 20 words."
     fields:
       - type: text
         validation: notBlank
