Changed the upload question

--- a/service/terms-and-conditions.yml
+++ b/service/terms-and-conditions.yml
@@ -19,7 +19,7 @@ Terms and conditions:
           - "Month"
           - "Year"
           - "Other"
-  If you have a terms and conditions document for your service, upload it here:
+  Please upload your terms and conditions document:
     mockAnswer: Umbraco Terms_Conditions 102014.odf
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
